Updates from lappy

--- a/litreview.bib
+++ b/litreview.bib
@@ -221,5 +221,35 @@
     publisher={ACM}
 }
 
+@inproceedings{brewer2000towards,
+	title={Towards robust distributed systems},
+	author={Brewer, Eric A},
+	booktitle={PODC},
+	volume={7},
+	year={2000}
+}
 
+@article{weber_nosql_2010,
+	title = {Nosql databases},
+	url = {http://wiki.hsr.ch/Datenbanken/files/Weber_NoSQL_Paper.pdf},
+	urldate = {2016-12-13},
+	journal = {University of Applied Sciences HTW Chur, Switzerland},
+	author = {Weber, Silvan},
+	year = {2010},
+}
 
+@book{ravendb,
+	author = {A. Rahien and O. Eini},
+	title = {RavenDB Mythology Documentation},
+	date = {November 29, 2010},
+	OPTedition = {1.0},
+}
+
+@article{sharma_extended_2015,
+	title = {An {Extended} {Classification} and {Comparison} of {NoSQL} {Big} {Data} {Models}},
+	url = {http://arxiv.org/abs/1509.08035},
+	urldate = {2016-01-12},
+	journal = {arXiv preprint arXiv:1509.08035},
+	author = {Sharma, Sugam},
+	year = {2015},
+}
